--- a/po/lv.po
+++ b/po/lv.po
@@ -18,22 +18,22 @@
 # Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>, 2010.
 # Raivis Dejus <orvils@gmail.com>, 2006, 2007, 2009.
 # Anita Reitere <nitalynx@gmail.com>, 2010.
-# Rūdofls Mazurs <rudolfs.mazurs@gmail.com>, 2011.
+# Rūdofls Mazurs <rudolfs.mazurs@gmail.com>, 2011, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-control-center.HEAD.lv\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug."
-"cgi?product=drwright&component=general\n"
-"POT-Creation-Date: 2011-03-06 23:25+0000\n"
-"PO-Revision-Date: 2011-04-18 23:03+0300\n"
-"Last-Translator: Rūdofls Mazurs <rudolfs.mazurs@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=drwright&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2013-08-04 11:40+0000\n"
+"PO-Revision-Date: 2013-10-05 14:14+0300\n"
+"Last-Translator: Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>\n"
 "Language-Team: Latvian <lata-l10n@googlegroups.com>\n"
+"Language: lv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "#-#-#-#-#  lv.po (lv)  #-#-#-#-#\n"
-"X-Generator: Lokalize 1.1\n"
+"X-Generator: Lokalize 1.5\n"
 "Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : "
 "2);\n"
 "#-#-#-#-#  lv.po (lv)  #-#-#-#-#\n"
@@ -47,86 +47,85 @@ msgstr ""
 
 #: ../src/main.c:40
 msgid "Enable debugging code"
-msgstr "Ieslēgt atkļūdošans kodu"
+msgstr "Ieslēgt atkļūdošanas kodu"
 
 #: ../src/main.c:64
 msgid "Typing Monitor"
 msgstr "Drukāšanas pārraugs"
 
-#: ../src/drwright.c:168
+#: ../src/drwright.c:213
 msgid "Typing Break Reminder"
 msgstr "Rakstīšanas pārtraukuma atgādinātājs"
 
-#: ../src/drwright.c:171
+#: ../src/drwright.c:216
 #, c-format
-#| msgid "%d minute until the next break"
-#| msgid_plural "%d minutes until the next break"
 msgid "Approximately %d minute to the next break."
 msgid_plural "Approximately %d minutes to the next break."
 msgstr[0] "Apmēram %d minūte līdz nākamajam pārtraukumam."
 msgstr[1] "Apmēram %d minūtes līdz nākamajam pārtraukumam."
 msgstr[2] "Apmēram %d minūšu līdz nākamajam pārtraukumam."
 
-#: ../src/drwright.c:177
-#| msgid "Less than one minute until the next break"
+#: ../src/drwright.c:222
 msgid "Less than one minute to the next break."
 msgstr "Mazāk par vienu minūti līdz nākamajam pārtraukumam."
 
-#: ../src/drwright.c:189
-#| msgid "X Settings"
+#: ../src/drwright.c:234
 msgid "Settings…"
 msgstr "Iestatījumi…"
 
-#: ../src/drwright.c:193
-#| msgid "_Take a Break"
+#: ../src/drwright.c:238
 msgid "Take Break Now"
 msgstr "Tagad atpūsties"
 
-#: ../src/drw-break-window.c:189
+#: ../src/drw-break-window.c:255
 msgid "_Postpone Break"
 msgstr "_Atlikt pārtraukumu"
 
-#: ../src/drw-break-window.c:234
+#: ../src/drw-break-window.c:281
+#| msgid "Lock screen"
+msgid "_Lock Screen"
+msgstr "_Bloķēt ekrānu"
+
+#: ../src/drw-break-window.c:308
 msgid "Take a break!"
 msgstr "Aiziet atpūties!"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:1
-msgid "Number of seconds of typing time before break mode starts"
-msgstr "Pēc cik ilga rakstīšanas laika sekundēs sāksies pārtraukuma režīms"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:2
-msgid "Number of seconds that the typing break should last"
-msgstr "Cik garai būtu jābūt rakstīšanas pauzei (sekundēs)"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:3
-msgid "Phrase to unlock the break screen with"
-msgstr "Parole, ar ko atslēgt pārtraukuma ekrānu"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:4
-msgid "Priority to use for this plugin"
-msgstr "Prioritāte, ko izmantot šim spraudnim"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:5
 msgid "Whether the settings daemon should activate the typing break plugin"
 msgstr ""
 "Vai iestatījumu dēmonam vajadzētu aktivēt rakstīšanas pārtraukumu spraudni"
 
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:6
-msgid "Whether the typing break can be postponed"
-msgstr "Vai rakstīšanas pauzi var pārcelt uz vēlāku laiku"
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:2
+msgid "Priority to use for this plugin"
+msgstr "Prioritāte, ko izmantot šim spraudnim"
 
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:7
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:3
 msgid "Whether typing break is enabled"
 msgstr "Vai rakstīšanas pārtraukums ir aktivēts"
 
-#: ../src/gnome-typing-break-panel.desktop.in.in.h:1
-#| msgid "Enable typing breaks plugin"
-msgid "Change typing break settings"
-msgstr "Mainīt rakstīšanas pārtraukumu iestatījumus"
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:4
+msgid "Whether the typing break can be postponed"
+msgstr "Vai rakstīšanas pauzi var pārcelt uz vēlāku laiku"
 
-#: ../src/gnome-typing-break-panel.desktop.in.in.h:2
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:5
+msgid "Number of seconds of typing time before break mode starts"
+msgstr "Pēc cik ilga rakstīšanas laika sekundēs sāksies pārtraukuma režīms"
+
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:6
+msgid "Number of seconds that the typing break should last"
+msgstr "Cik garai būtu jābūt rakstīšanas pauzei (sekundēs)"
+
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:7
+msgid "Phrase to unlock the break screen with"
+msgstr "Parole, ar ko atslēgt pārtraukuma ekrānu"
+
+#: ../src/gnome-typing-break-panel.desktop.in.in.h:1
 msgid "Typing Break"
 msgstr "Rakstīšanas pārtraukums"
+
+#: ../src/gnome-typing-break-panel.desktop.in.in.h:2
+msgid "Change typing break settings"
+msgstr "Mainīt rakstīšanas pārtraukumu iestatījumus"
 
 #. Translators: those are keywords for the example control-center panel
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:4
@@ -134,20 +133,20 @@ msgid "Typing;Break;RSI;Workrave;"
 msgstr "Rakstīšana;Pārtraukums;RSI;Workrave;"
 
 #: ../src/drwright-panel.glade.h:1
-msgid "_Allow postponing of breaks"
-msgstr "Ļ_aut pārcelt rakstīšanas pārtraukumus"
+msgid "_Lock screen to enforce typing break"
+msgstr "S_lēgt ekrānu, lai uzspiestu darba pārtraukumu"
 
 #: ../src/drwright-panel.glade.h:2
 msgid "_Break interval lasts:"
 msgstr "_Pauzes intervāls ilgst:"
 
 #: ../src/drwright-panel.glade.h:3
-msgid "_Lock screen to enforce typing break"
-msgstr "S_lēgt ekrānu, lai uzspiestu darba pārtraukumu"
-
-#: ../src/drwright-panel.glade.h:4
 msgid "_Work interval lasts:"
 msgstr "_Darba intervāls ilgst:"
+
+#: ../src/drwright-panel.glade.h:4
+msgid "_Allow postponing of breaks"
+msgstr "Ļ_aut pārcelt rakstīšanas pārtraukumus"
 
 #~ msgid "Don't check whether the notification area exists"
 #~ msgstr "Nepārbaudīt, vai eksistē paziņojumu apgabals"
@@ -367,9 +366,9 @@ msgstr "_Darba intervāls ilgst:"
 #~ "Set this to one of \"none\", \"lock_screen\", or \"force_logout\". The "
 #~ "action will get performed when the smartcard used for log in is removed."
 #~ msgstr ""
-#~ "Setzen Sie dies auf »none« (nichts tun), »lock_screen« (Bildschirm sperren) "
-#~ "oder »force_logout« (Abmelden erzwingen). Die Aktion wird ausgeführt, wenn "
-#~ "die zum Anmelden benutzte Smartcard entfernt wird."
+#~ "Setzen Sie dies auf »none« (nichts tun), »lock_screen« (Bildschirm "
+#~ "sperren) oder »force_logout« (Abmelden erzwingen). Die Aktion wird "
+#~ "ausgeführt, wenn die zum Anmelden benutzte Smartcard entfernt wird."
 
 #~ msgid "Smartcard removal action"
 #~ msgstr "Smartcard-Entfernung"
@@ -548,9 +547,6 @@ msgstr "_Darba intervāls ilgst:"
 
 #~ msgid "Launch web browser"
 #~ msgstr "Palaist tīmekļa pārlūku"
-
-#~ msgid "Lock screen"
-#~ msgstr "Noslēgt ekrānu"
 
 #~ msgid "Log out"
 #~ msgstr "Atteikties"
@@ -1288,8 +1284,8 @@ msgstr "_Darba intervāls ilgst:"
 
 #~ msgid "GConf key %s set to type %s but its expected type was %s\n"
 #~ msgstr ""
-#~ "GConf atslēga %s ir iestatīta uz tipu %s, bet tai vajadzētu būt ar tipu %"
-#~ "s\n"
+#~ "GConf atslēga %s ir iestatīta uz tipu %s, bet tai vajadzētu būt ar tipu "
+#~ "%s\n"
 
 #~ msgid "Manage X Settings"
 #~ msgstr "Pārvaldīt X iestatījumus"
