Fix broken keywords string in Dutch

--- a/po/nl.po
+++ b/po/nl.po
@@ -138,7 +138,7 @@ msgstr "Tikpauze-instellingen wijzigen"
 #. Translators: those are keywords for the example control-center panel
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:4
 msgid "Typing;Break;RSI;Workrave;"
-msgstr "Typing;Break;RSI;Workrave;Typen;Pauze;Muisarm"
+msgstr "Typing;Break;RSI;Workrave;Typen;Pauze;Muisarm;"
 
 #: ../src/drwright-panel.glade.h:1
 msgid "_Lock screen to enforce typing break"
