--- a/po/eu.po
+++ b/po/eu.po
@@ -4,13 +4,15 @@
 #
 # Hizkuntza Politikarako Sailburuordetza <hizkpol@ej-gv.es>, 2004, 2005.
 # Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2004, 2005, 2006, 2007, 2008, 2009, 2010.
-# Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2014.
+# Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2014, 2015.
+# Edurne Labaka <elabaka@uzei.com>, 2015.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=drwright&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2014-05-01 12:16+0200\n"
+"POT-Creation-Date: 2015-02-07 11:30+0100\n"
 "PO-Revision-Date: 2014-05-01 12:29+0200\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@zundan.com>\n"
 "Language-Team: Basque <itzulpena@euskalgnu.org>\n"
@@ -120,4 +122,3 @@ msgstr "_Lanaren iraupena:"
 #: ../src/drwright-panel.glade.h:4
 msgid "_Allow postponing of breaks"
 msgstr "_Baimendu atsedenak atzeratzea"
-
